# EggplantsAppServer

./: CMakeLists.txt
include/: login.h  serverController.h
include/event2/: event-config.h
src/: login.cpp  main.cpp  serverController.cpp
